<resources>
    <string name="app_name">qlct</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan">Kế hoạch</string>
    <string name="sdt">0375227251</string>
    <string name="email">Ninhtran949@gmail.com</string>
    <string name="giao_d_ch_g_n_y">Giao dịch gần đây</string>

    <string name="chi_ti_t_k_ho_ch">Chi tiết kế hoạch</string>
    <string name="Email">Email</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="h_y_i_n_th_ng_tin_c_a_b_n">Hãy điền thông tin của bạn</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="b_n_ch_a_c_t_i_kho_n">Bạn chưa có tài khoản?</string>
    <string name="ng_k">Đăng kí</string>
    <string name="s_chi_ti_u">Sổ chi tiêu</string>
    <string name="this_is_app_qlct">This is app qlct</string>
    <string name="gi_i_thi_u">Giới Thiệu</string>
    <string name="h_tr">Hỗ trợ</string>
    <string name="qu_n_l_t_i_kho_n">Quản lý tài khoản</string>
    <string name="name">Name</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="caidat">Cài đặt</string>
    <string name="nh_i_di_n">Ảnh đại diện</string>
    <string name="li_n_h">Liên hệ:</string>
    <string name="th_m_thu_chi">Thêm thu chi</string>
    <string name="h_n_m_c">Hạn mức</string>
    <string name="ch_n_lo_i_chi_ti_u">Chọn loại chi tiêu</string>
    <string name="t_o_thu_chi">Tạo thu chi</string>
    <string name="k_ho_ch">Kế hoạch</string>
    <string name="v_c_a_t_i">Ví của tôi</string>
    <string name="b_o_c_o_h_ng_th_ng">Báo cáo thu chi</string>
    <string name="_182_000">182,000</string>
    <string name="vnd">VND</string>
    <string name="todo">TODO</string>
    <string name="ghi_chu">Ghi chu</string>
    <string name="chon_ngay">Chon ngay</string>
    <string name="todo1">TODO</string>
    <string name="chi_ti_t">Chi tiết</string>
    <string name="h_n_m_c1">Hạn mức :</string>
    <string name="dd">đ</string>
    <string name="ng_y_b_t_u">Ngày bắt đầu:</string>
    <string name="ng_y_k_t_th_c">Ngày kết thúc:</string>
    <string name="ghi_ch">Ghi chú:</string>
    <string name="ok">Ok</string>


    <string-array name="listVi">
        <item>Chọn ví</item>
        <item>Ngân hàng</item>
        <item>Tiền mặt</item>
    </string-array>
    <string-array name="listCheDo">
        <item>Chọn chế độ</item>
        <item>Thu nhập</item>
        <item>Chi tiêu</item>
    </string-array>
    <string-array name="listLoaiCT">
        <item>Chọn loại chi tiêu</item>
        <item>Ăn uống</item>
        <item>Du lịch</item>
        <item>Tiền nhà</item>
        <item>Phương tiện</item>
    </string-array>
</resources>