<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment">

    <LinearLayout
        android:id="@+id/ll_Setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur_yellow"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blur_yellow">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/c_i_t"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ltheader"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/blur_yellow"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAvt"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center|center_vertical"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/nh_i_di_n"
                tools:ignore="ImageContrastCheck" />


            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_corners"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="#455A64"
                android:visibility="visible" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQLTK"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="5dp"
            android:drawableTint="@color/gray"
            android:gravity="center_vertical|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/qu_n_l_t_i_kho_n"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:targetApi="m" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCaiDat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_setting_1"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="5dp"
            android:drawableTint="@color/gray"
            android:gravity="center_vertical|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/caidat"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:targetApi="m" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHoTro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_hotro"
            android:drawableEnd="@drawable/ic_downward"
            android:drawablePadding="5dp"
            android:drawableTint="@color/gray"
            android:gravity="center_vertical|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/h_tr"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:targetApi="m" />

        <LinearLayout
            android:id="@+id/ll_Hotro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_lienhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtlienhe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/li_n_h"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSDT"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sdt"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/email"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGioiThieu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_introduce"
            android:drawableEnd="@drawable/ic_downward"
            android:drawablePadding="5dp"
            android:drawableTint="@color/gray"
            android:gravity="center_vertical|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/gi_i_thi_u"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/txtGioithieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_app_qlct"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>