<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivity.AddChiTieuActivity"
    android:orientation="vertical"
    android:background="@color/blur_yellow">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/blur_yellow"
            android:src="@drawable/ic_close"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/th_m_thu_chi"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/blur_yellow"
        android:paddingStart="10dp"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_n_m_c">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/edtHanMuc"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spnCheDo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/spnLoaiChiTieu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/ch_n_lo_i_chi_ti_u"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/tvChonNgay"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/chon_ngay"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp" />
        <EditText
            android:id="@+id/edtGhiChu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ghi_chu"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/bg_borders"
            android:backgroundTint="@color/white"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"

            tools:ignore="TextFields"
            android:autofillHints="" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddThuChi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_corners"
        android:backgroundTint="@color/orange"
        android:drawableEnd="@drawable/ic_forward"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:paddingStart="20dp"
        android:text="@string/t_o_thu_chi"
        android:textAllCaps="false"
        android:textColor="#4A148C"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="RtlSymmetry"
        tools:targetApi="m" />
</LinearLayout>