<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivity.PlanDetailAcitivity"
    android:orientation="vertical"
    android:background="@color/blur_yellow">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/btnCloseDetail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/white"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chi_ti_t_k_ho_ch"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_button"
                android:src="@drawable/ic_edit"
                app:tint="@color/orange"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corners"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingBottom="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/bg_corners"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_plan_logo"
                android:contentDescription="@string/todo1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/edtTenKeHoach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:text="Tên kế hoạch"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnHoanThanh"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_borders"
                    android:backgroundTint="@color/orange"
                    android:text="Hoàn thành "
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/chi_ti_t"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/h_n_m_c1"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtHanMuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:text="200000"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd"
                android:textSize="15sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:background="@null"
                android:layout_gravity=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ng_y_b_t_u"
                android:textColor="@color/gray"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22/2/2024"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="none"
                android:id="@+id/txtNgayBatDau"
                android:layout_weight="1"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ng_y_k_t_th_c"
                android:textColor="@color/gray"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22/2/2024"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="none"
                android:id="@+id/txtNgayKetThuc"
                android:layout_weight="1"
                android:gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ghi_ch"
                android:textColor="@color/gray"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtGhiChu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="20dp"
                android:text="Không"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/ok"
            tools:ignore="NestedWeights" />

    </LinearLayout>
</LinearLayout>